# web2pdf

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
tests/: test_cli.py  test_converter.py
web2pdf/: cli.py  converter.py
web2pdf/utils/: error_handling.py  logger.py  template.py  validators.py
